[gd_scene load_steps=2 format=3 uid="uid://dtnagmw10hmt4"]

[ext_resource type="Script" path="res://scripts/components/destructable_component.gd" id="1_6ndkb"]

[node name="DestructableComponent" type="Area2D" node_paths=PackedStringArray("collison")]
collision_layer = 0
collision_mask = 12
monitorable = false
script = ExtResource("1_6ndkb")
collison = NodePath("CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(30, 30)
polygon = PackedVector2Array(-2, 0, 0, 1, 2, 0, 0, -1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
